odsApi_versioned_docs/version-5.4/platform-dev-guide/configuration/configuration-details.mdx
---
title: Configuration Details
---

# Configuration Details

The Ed-Fi ODS / API is configurable in a number of ways. Since the source code is available to licensees, one could argue that everything is configurable. But, what we're discussing in this section are things like settings and options that do not require a change to the compiled code.

Key configuration points include:
* OAuth endpoints
* Instance type (e.g., Sandbox, Shared Instance)
* Token timeouts
* Enabling / disabling features

See the following sections for more details on important configuration options:

* [Required Configuration Settings](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774317/Configuration+Details#ConfigurationDetails-RequiredConfigurationSettings)
* [Optional Configuration Settings](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774317/Configuration+Details#ConfigurationDetails-OptionalConfigurationSettings)
* [Environment Configuration](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774317/Configuration+Details#ConfigurationDetails-EnvironmentConfiguration)
* [Secret Manager](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774317/Configuration+Details#ConfigurationDetails-SecretManager)

## Required Configuration Settings

Some configuration must be done for every Ed-Fi ODS / API platform instance. Examples of required configurations include database connection strings, SMTP server locations, and similar.

To make it easier for developers to install and run the Ed-Fi ODS / API, the default download from source control is pre-configured with values appropriate for a developer or single-server test instance of the system.

| Application Location | Setting Name | Value | Description |
|--------------------|--------------|-------|-------------|
| EdFi.Ods.SandboxAdmin | appsettings.json | OAuthUrl | Example: `http://site-address:port/oauth`<br/>Points to the root of the authorization API in the Ed-Fi ODS / API. |
| EdFi.Ods.WebApi | appsettings.json | ApiSettings:Mode | Example: Sandbox, SharedInstance, YearSpecific, DistrictSpecific<br/>The component settings for the API. See the [following section](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774339/Platform+Dev+Guide+-+Extensibility+Customization#Db%20Partition) on Developers' Guide for more information on this setting. |
| EdFi.Ods.SwaggerUI | appsettings.json | WebApiVersionUrl | Example: `http://site-address:port/`<br/>Points to the version endpoint in the Ed-Fi ODS / API. |

A deployment to a staging or production instance is usually more involved, and requires additional configuration. Required configurations for a production instance can be found in the [Deployment](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774362/Platform+Dev+Guide+-+Deployment) section of this documentation.

## Optional Configuration Settings

Although this list of settings is not exhaustive, other important and useful optional configuration values include:

| Application Location | Setting Name | Value | Description |
|--------------------|--------------|-------|-------------|
| EdFi.Ods.SwaggerUI | appsettings.json | SwaggerUIOptions:OAuthConfigObject:ClientId | Example: rcKsguTICAaBm9PxyUW4i<br/>Optionally provides the value to prefill in the "key" field of auth. |
| EdFi.Ods.SwaggerUI | appsettings.json | SwaggerUIOptions:OAuthConfigObject:ClientSecret | Example: t0CklTOfMBGZNPgVQDLHh<br/>Optionally provides the value to prefill in the "secret" field of auth. |
| EdFi.Ods.SwaggerUI | appsettings.json | Years | Example:<br/>```"Years": [```<br/>```    {```<br/>```      "Year": "2020"```<br/>```    },```<br/>```    {```<br/>```      "Year": "2021",```<br/>```      "IsDefault": true```<br/>```    },```<br/>```    {```<br/>```      "Year": "2022"```<br/>```    }```<br/>```  ],```<br/>Optionally provides settings for years shown in swagger for School Year selection. This setting is applicable in a YearSpecific API. |
| EdFi.Ods.SandboxAdmin | appsettings.json | User | Example:<br/>```"User": {```<br/>```    "Test Admin": {```<br/>```        "Email": "test@ed-fi.org",```<br/>```        "Admin": "true",```<br/>```        "NamespacePrefixes": [```<br/>```            "uri://ed-fi.org",```<br/>```            "uri://gbisd.org"```<br/>```        ],```<br/>```        "Password": "zSKj8DdR4mQlPp3X2i1ra",```<br/>```        "Sandboxes": {```<br/>```            "Minimal Demonstration Sandbox": {```<br/>```                "Key": "FLqUvMPSoG4ryp7HiRBmX",```<br/>```                "Type": "Minimal"```<br/><br/>automatic refreshes of sandboxes to a clean state. Each user entry will be created with the given email/password, and the sandboxes defined underneath it will also be created for the type and key/secret values.<br/><br/>New: Must include the NamespacePrefixes elements, to deploy what namespaces for the associated vendor. This collection is required, and at least one namespace prefix is required. |
| EdFi.Ods.SandboxAdmin | appsettings.json | MaximumSandboxesPerUser | Example: 5<br/>The maximum number of sandboxes a sandbox admin user can create. |
| EdFi.Ods.SandboxAdmin | appsettings.json | DefaultClaimSetName | Example: SIS Vendor<br/>The claim set name for the default application for sandbox application clients. |
| EdFi.Ods.SandboxAdmin | appsettings.json | MailSettings:Smtp:UserName | Example: User.Name<br/>The username of the credentials that are used to create an SMTP client for sending email messages from the Sandbox Admin application for new user creation and password resets |
| EdFi.Ods.SandboxAdmin | appsettings.json | MailSettings:Smtp:Password | Example: abcd1234<br/>The password of the credentials that are used to create an SMTP client for sending email messages from the Sandbox Admin application for new user creation and password resets |
| EdFi.Ods.SandboxAdmin | appsettings.json | MailSettings:Smtp:From | Example: no-reply@ed-fi.org<br/>The email address that will show up in the FROM field of any email messages sent from the Sandbox Admin application |
| EdFi.Ods.SandboxAdmin | appsettings.json | MailSettings:Smtp:Host | Example: smtp.example.com<br/>The SMTP server that is used for sending email messages from the Sandbox Admin application. This value is necessary when the DeliveryMethod of Network is specified |
| EdFi.Ods.SandboxAdmin | appsettings.json | MailSettings:Smtp:Port | Example: 25<br/>The port number used by the SMTP server for email messages. If no value is specified, then the default of 25 is used. |
| EdFi.Ods.SandboxAdmin | appsettings.json | MailSettings:Smtp:DeliveryMethod | Example: Network<br/>Specifies how email messages are delivered. The valid choices for this are:<br/>* Network - Email is sent through the network to an existing SMTP server<br/>* PickupDirectoryFromIis - Email is copied to the pickup directory used by IIS for delivery via its SMTP service<br/>* SpecifiedPickupDirectory - Email is copied to the specified directory for processing by an external mail application |
| EdFi.Ods.SandboxAdmin | appsettings.json | MailSettings:Smtp:SpecifiedPickupDirectory:PickupDirectoryLocation | Example: C:\\temp\\location\\emails<br/>When a Delivery Method of SpecifiedPickupDirectory is used, this is the folder where email messages will be saved to, to be picked up by an external mail application for processing and sending |
| EdFi.Ods.WebApi | appsettings.json | QueueAutoCreate | Example: 1<br/>Whether or not a message queue should be created if it is not found. For Azure or Active Directory queues, this should be 0. |
| EdFi.Ods.WebApi | appsettings.json | CommitUploadCommandMessageEndPoint | Example: localhost<br/>The server hosting the message queues. |
| EdFi.Ods.WebApi | appsettings.json | BearerTokenTimeoutMinutes | Example: 30<br/>The amount of time that an OAuth token remains valid. |
| EdFi.Ods.WebApi | appsettings.json | SecurityMetadataCacheTimeoutMinutes | Example: 10<br/>The amount of time the security metadata from EdFi_Security database is cached. E.g., if it is set to 10 mins, the claim set changes will reflect in the API at least after 10 mins without needing to recycle API process. |
| EdFi.Ods.WebApi | appsettings.json | defaultPageSizeLimit | Example: 500<br/>Maximum number of records that can be fetched in a GET request. |
| EdFi.Ods.WebApi | appsettings.json | ApiSettings:Features:ChangeQueries | true<br/>Enables the [Changed Record Queries](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774855/Changed+Record+Queries) endpoints (database configuration remains a separate step, see [Using the Changed Record Queries](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774464/Using+the+Changed+Record+Queries)). |
| EdFi.Ods.WebApi | appsettings.json | ApiSettings:Features:OpenApiMetadata | true<br/>Enables the metadata API endpoint, used by Swagger UI. Production deployments should disable this by changing the value to false. |
| EdFi.Ods.WebApi | appsettings.json | ApiSettings:Features:Composites | true<br/>Enables the Composites API endpoints, including the default Enrollments composite and any custom composites that have been added to the installation. |
| EdFi.Ods.WebApi | appsettings.json | ApiSettings:Features:Profiles | true<br/>Enables the Profiles endpoints, including the default profiles and any custom profiles that have been added to the installation. |
| EdFi.Ods.WebApi | appsettings.json | ApiSettings:Features:IdentityManagement | false<br/>Enables the Identity API endpoints. |
| EdFi.Ods.WebApi | appsettings.json | ApiSettings:Features:Extensions | true<br/>Enables the API endpoints created for all Extensions. An installation that is not customized at all and still has the GrandBend and Sample extensions can disable this feature in production. |
| EdFi.Ods.WebApi | appsettings.json | ApiSettings:Features:UniqueIdValidation | false<br/>Enables [Unique ID System Integration](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774878/Unique+ID+System+Integration). Must implement IUniqueIdToIdValueMapper and register within the implementation within the WebApi. |
| EdFi.Ods.Web.Api | appsettings.json | ApiSettings:Features:TokenInfo | true<br/>Enables the token_info introspective endpoint. |
| EdFi.Ods.Web.Api | appsettings.json | Plugin:Folder | Example: ../../Plugin<br/>Configures the plugin folder that API looks to deploy extensions dynamically. |
| EdFi.Ods.Web.Api | appsettings.json | Plugin:Scripts | Example: [ tpdm ]<br/>Configures the script (located in plugin folder by default) responsible for downloading the extension plugins and placing them in the plugin folder. |

## Environment Configuration

While appsettings.json provides the primary configuration for the ASP.NET Core applications in the ODS / API solution, appsettings.**Environment**.json can be used to override the settings in appsettings.json in deployment environments. In development environment, initdev creates appsettings.**Development**.json to override settings for development environment. Note that the settings in appsettings.**Development**.json are overwritten every time initdev is executed. See [Configuration in ASP.NET Core](https://docs.microsoft.com/en-us/aspnet/core/fundamentals/configuration/?view=aspnetcore-3.1) for more details.

## Secret Manager

In development environments ASP.NET Core applications in the ODS / API solution uses secret manager tool to provide a way for setting overrides away from the projects so that they aren't accidentally checked into source control. To set overrides, you can either use the [.NET CLI Tool](https://docs.microsoft.com/en-us/aspnet/core/security/app-secrets?view=aspnetcore-5.0&tabs=windows#set-a-secret)

![Secret Manager CLI](https://edfi.atlassian.net/wiki/download/thumbnails/22774317/image2021-3-19_12-8-29.png)

or [Manage User Secrets](https://docs.microsoft.com/en-us/aspnet/core/security/app-secrets?view=aspnetcore-3.1&tabs=windows#json-structure-flattening-in-visual-studio) gesture in Visual Studio.

![Manage User Secrets](https://edfi.atlassian.net/wiki/download/thumbnails/22774317/image2021-3-19_12-6-13.png)

Both of the above methods will create a secret.json file in the local machine's user profile folder and will override settings in appsettings.Development.json.

| Website | secrets.json location in Windows |
|---------|---------------------------------|
| Ed-Fi ODS / API | %APPDATA%\Microsoft\UserSecrets\f1506d66-289c-44cb-a2e2-80411cc690ec |
| Sandbox Administration | %APPDATA%\Microsoft\UserSecrets\f1506d66-289c-44cb-a2e2-80411cc690ea |
| Ed-Fi ODS / API Documentation | %APPDATA%\Microsoft\UserSecrets\f1506d66-289c-44cb-a2e2-80411cc690eb |

e.g., Following secret.json overrides the default 'GrandBend' dataset and deploys with 'Glendale' sample dataset.

![Secret.json example](https://edfi.atlassian.net/wiki/download/thumbnails/22774317/image2021-3-12_16-47-40.png)

See [Safe storage of app secrets in development in ASP.NET Core](https://docs.microsoft.com/en-us/aspnet/core/security/app-secrets?view=aspnetcore-3.1&tabs=windows) for more details.

