odsApi_versioned_docs/version-7.3/platform-dev-guide/configuration/configuration-details.mdx
---
sidebar_position: 1
---

# Configuration Details

The Ed-Fi ODS / API is configurable in a number of ways. Since the source code
is available to licensees, one could argue that everything is configurable. But,
what we’re discussing in this section are things like settings and options that
do not require a change to the compiled code.

Key configuration points include: OAuth endpoints, Admin and Security datastore
connections, Token timeouts, Enabling / disabling features. See the following
sections for more details on important configuration options

## Required Configuration Settings

Some configuration must be done for every Ed-Fi ODS / API platform instance. In
Ed-Fi ODS / API, the _appsettings.json_ file provides the primary configuration
for the ASP.NET Core applications. Examples of required configurations include
database connection strings, SMTP server locations, and similar.

To make it easier for developers to install and run the Ed-Fi ODS / API, the
default download from source control is pre-configured with values appropriate
for a developer or single-server test instance of the system.

The _appsettings.json_ files provide the primary configurations for the ASP.NET
applications described below, though the .NET architecture provides support for
additional configuration sources such as environment variables, command-line
arguments, and other sources (such as services from cloud providers). See the
[Configuration in ASP.NET
Core](https://learn.microsoft.com/en-us/aspnet/core/fundamentals/configuration/?view=aspnetcore-10.0)
documentation for more information.

### EdFi.Ods.SwaggerUI

* **WebApiVersionUrl**
  <table>
    <tr style={{verticalAlign: 'top'}}>
      <th>Example Value</th><td>http\://site-address:port/</td>
    </tr>
    <tr style={{verticalAlign: 'top'}}>
      <th>Description</th><td>Points to the version endpoint in the Ed-Fi ODS / API.</td>
    </tr>
  </table>

### EdFi.Ods.SandboxAdmin

* **OAuthUrl**
  <table>
    <tr style={{verticalAlign: 'top'}}>
      <th>Example Value</th><td>http\://site-address:port/oauth</td>
    </tr>
    <tr style={{verticalAlign: 'top'}}>
      <th>Description</th><td>Points to the root of the authorization API in the Ed-Fi ODS / API.</td>
    </tr>
  </table>

### EdFi.Ods.WebApi

* **ConnectionStrings:EdFi_Admin**
  <table>
    <tr style={{verticalAlign: 'top'}}>
      <th>Example Value</th><td>Server=(local); Database=EdFi_Admin; Trusted_Connection=True; Application Name=EdFi.Ods.WebApi;</td>
    </tr>
    <tr style={{verticalAlign: 'top'}}>
      <th>Description</th><td>Connection string for the Admin database.</td>
    </tr>
  </table>
* **ConnectionStrings:EdFi_Security**
  <table>
    <tr style={{verticalAlign: 'top'}}>
      <th>Example Value</th><td>Server=(local); Database=EdFi_Security; Trusted_Connection=True; Persist Security Info=True; Application Name=EdFi.Ods.WebApi;</td>
    </tr>
    <tr style={{verticalAlign: 'top'}}>
      <th>Description</th><td>Connection string for the Security metadata database.</td>
    </tr>
  </table>
* **ApiSettings:OdsConnectionStringEncryptionKey**
  <table>
    <tr style={{verticalAlign: 'top'}}>
      <th>Example Value</th><td>JivjQAm53kz9IaBLUJIk+Rd+1YaKNZ88PkxjiSsQNRQ=</td>
    </tr>
    <tr style={{verticalAlign: 'top'}}>
      <th>Description</th><td>AES Encryption key used to encrypt ODS connection strings configured in the Admin database. (Required everywhere other than development environment).</td>
    </tr>
  </table>

A deployment to a staging or production instance is usually more involved, and
requires additional configuration. Required configurations for a production
instance can be found in the
[Deployment](../deployment/readme.md)
section of this documentation.

## Optional Configuration Settings

Although this list of settings is not exhaustive, other important and useful
optional configuration values include:

### EdFi.Ods.SwaggerUI

<table>
  <thead>
    <th>Setting Name</th>
    <th>Example Value</th>
    <th>Description</th>
  </thead>

  <tr style={{verticalAlign: 'top'}}>
    <td>SwaggerUIOptions:OAuthConfigObject:ClientId</td>
    <td>rcKsguTICAaBm9PxyUW4i</td>
    <td>Optionally provides the value to prefill in the "key" field of auth.</td>
  </tr>
  <tr style={{verticalAlign: 'top'}}>
    <td>SwaggerUIOptions:OAuthConfigObject:ClientSecret</td>
    <td>t0CklTOfMBGZNPgVQDLHh</td>
    <td>Optionally provides the value to prefill in the "secret" field of auth.</td>
  </tr>
  <tr style={{verticalAlign: 'top'}}>
    <td>Tenants</td>
    <td>

```json
"Tenants": [
  {
    "Tenant": "Tenant1"
  }
],
```

    </td>
    <td>
      Optionally provides the name of a tenant. This setting is required if using [Multi Tenant Configuration](./single-and-multi-tenant-configuration.md#multi-tenant-configuration). A valid tenant name is required for SwaggerUI to retrieve the API metadata.
    </td>
  </tr>
  <tr style={{verticalAlign: 'top'}}>
    <td>:new: ShowDomains</td>
    <td>true</td>
    <td>Displays Ed-Fi resource domain badges in Swagger UI (default: true).</td>
  </tr>
  <tr style={{verticalAlign: 'top'}}>
    <td>:new: StartupClassName</td>
    <td>CustomStartup</td>
    <td>Specifies the name of the Startup class the application should use. This allows overriding the default Startup class when initializing the SwaggerUI.</td>
  </tr>
</table>

### EdFi.Ods.SandboxAdmin

<table>
  <thead>
    <th>Setting Name</th>
    <th>Example Value</th>
    <th>Description</th>
  </thead>

  <tr style={{verticalAlign: 'top'}}>
    <td>User</td>
    <td>

```json
"User": {
  "Test Admin": {
    "Email": "<test@ed-fi.org>",
    "Admin": "true",
    "NamespacePrefixes": [
      "uri://ed-fi.org",
      "uri://gbisd.org"
    ],
    "Password": "zSKj8DdR4mQlPp3X2i1ra",
    "Sandboxes": {
      "Minimal Demonstration Sandbox": {
        "Key": "FLqUvMPSoG4ryp7HiRBmX",
        "Type": "Minimal",
        "Secret": "bhJfA6qt7iNP3Xd5as9O0",
        "Refresh": "false"
      },
      "Populated Demonstration Sandbox": {
        "Key": "rcKsguTICAaBm9PxyUW4i",
        "Type": "Sample",
        "Secret": "t0CklTOfMBGZNPgVQDLHh",
        "Refresh": "false"
      }
    }
  }
}
```

    </td>
    <td>
      Defines automatically created user accounts and sandboxes. Also configures automatic refreshes of sandboxes to a clean state. Each user entry will be created with the given email/password, and the sandboxes defined underneath it will also be created for the type and key/secret values.<br/><br/>New: Must include the NamespacePrefixes elements, to deploy what namespaces for the associated vendor. This collection is required, and at least one namespace prefix is required.
    </td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>MaximumSandboxesPerUser</td>
    <td>5</td>
    <td>The maximum number of sandboxes a sandbox admin user can create.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>DefaultClaimSetName</td>
    <td>SIS Vendor</td>
    <td>The claim set name for the default application for sandbox application clients.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>MailSettings:Smtp:UserName</td>
    <td>User.Name</td>
    <td>The username of the credentials that are used to create an SMTP client for sending email messages from the Sandbox Admin application for new user creation and password resets</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>MailSettings:Smtp:Password</td>
    <td>abcd1234</td>
    <td>The password of the credentials that are used to create an SMTP client for sending email messages from the Sandbox Admin application for new user creation and password resets</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>MailSettings:Smtp:From</td>
    <td>`no-reply@example.com`</td>
    <td>The email address that will show up in the FROM field of any email messages sent from the Sandbox Admin application</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>MailSettings:Smtp:Host</td>
    <td>smtp.example.com</td>
    <td>The SMTP server that is used for sending email messages from the Sandbox Admin application. This value is necessary when the DeliveryMethod of Network is specified</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>MailSettings:Smtp:Port</td>
    <td>25</td>
    <td>The port number used by the SMTP server for email messages. If no value is specified, then the default of 25 is used.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>MailSettings:Smtp<br/>:DeliveryMethod</p></td>
    <td>Network</td>
    <td>
    Specifies how email messages are delivered. The valid choices for this are:
    * _Network_ - Email is sent through the network to an existing SMTP server
    * _PickupDirectoryFromIis_ - Email is copied to the pickup directory used by IIS for delivery via its SMTP service
    * _SpecifiedPickupDirectory_ - Email is copied to the specified directory for processing by an external mail application
    </td>

  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>MailSettings:Smtp<br/>:SpecifiedPickupDirectory<br/>:PickupDirectoryLocation</p></td>
    <td>C:\temp\location\emails</td>
    <td>When a Delivery Method of SpecifiedPickupDirectory is used, this is the folder where email messages will be saved to, to be picked up by an external mail application for processing and sending</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>MailSettings:Smtp:EnableSsl</td>
    <td>true</td>
    <td>Indicates whether SSL encryption is used when establishing a connection with the SMTP server. This value is only applicable when the DeliveryMethod of Network is specified</td>
  </tr>

</table>

### EdFi.Ods.WebApi

<table>
  <thead>
    <th>Setting Name</th>
    <th>Example Value</th>
    <th>Description</th>
  </thead>

  <tr style={{verticalAlign: 'top'}}>
    <td style={{width: '25%'}}>QueueAutoCreate</td>
    <td>1</td>
    <td>Whether or not a message queue should be created if it is not found. For Azure or Active Directory queues, this should be 0.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>CommitUploadCommandMessageEndPoint</td>
    <td>localhost</td>
    <td>The server hosting the message queues.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>ApiSettings:BearerTokenTimeoutMinutes</td>
    <td>30</td>
    <td>The amount of time that an OAuth token remains valid.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: ApiSettings:BearerTokenPerClientLimit</td>
    <td>15</td>
    <td>The maximum number of active (non-expired) OAuth tokens allowed for a client. Setting this value to -1 disables the limit.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:Security:AbsoluteExpirationMinutes</p></td>
    <td>10</td>
    <td>The amount of time the security metadata from `EdFi_Security` database is cached. E.g., if it is set to 10 mins, the claim set changes will reflect in the API at least after 10 mins without needing to recycle API process.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:Descriptors:AbsoluteExpirationSeconds</p></td>
    <td>1800</td>
    <td>Number of seconds after which the descriptor cache is refreshed.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:Descriptors:UseExternalCache</p></td>
    <td>true</td>
    <td>When true, the Descriptor cache will use the configured external cache provider.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:PersonUniqueIdToUsi:AbsoluteExpirationSeconds</p></td>
    <td>14400</td>
    <td>Number of seconds after which the PersonUniqueIdToUsi mapping is refreshed. This settings is applied only when SlidingExpirationSeconds is not provided or set to 0.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:PersonUniqueIdToUsi:SlidingExpirationSeconds</p></td>
    <td>14400</td>
    <td>Number of seconds after which a PersonUniqueIdToUsi mapping is refreshed if not accessed.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:PersonUniqueIdToUsi:UseProgressiveLoading</p></td>
    <td>false</td>
    <td>When set to true, PersonUniqueIdToUsi mapping is loaded progressively as needed to fulfill the API requests (rather than being fully initialized in the background upon first request).</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:PersonUniqueIdToUsi:CacheSuppression:Student</p></td>
    <td>false</td>
    <td>Indicates whether student UniqueId/USI mappings should be cached, or retrieved on demand with each request. When set to true,  caching is suppressed.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:PersonUniqueIdToUsi:CacheSuppression:Staff</p></td>
    <td>false</td>
    <td>Indicates whether staff UniqueId/USI mappings should be cached, or retrieved on demand with each request. When set to true,  caching is suppressed.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:PersonUniqueIdToUsi:CacheSuppression:Parent</p></td>
    <td>false</td>
    <td>Indicates whether parent UniqueId/USI mappings should be cached, or retrieved on demand with each request. When set to true, caching is suppressed. For use with data standard 4.0 and below. This setting has no affect after data standard 4.0.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:PersonUniqueIdToUsi:CacheSuppression:Contact</p></td>
    <td>true</td>
    <td>Indicates whether contact UniqueId/USI mappings should be cached, or retrieved on demand with each request. When set to true, caching is suppressed. For use with data standard 5.0 and above. This setting has no affect before data standard 5.0.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:PersonUniqueIdToUsi:UseExternalCache</p></td>
    <td>true</td>
    <td>When true, the Person cache will use the configured external cache provider.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:ApiClientDetails:UseExternalCache</p></td>
    <td>true</td>
    <td>When true, the API Client cache will use the configured external cache provider.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:ApiClientDetails:AbsoluteExpirationSeconds</p></td>
    <td>14400</td>
    <td>Number of seconds after which API Client information is refreshed if not accessed.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:ExternalCacheProvider</p></td>
    <td>Redis</td>
    <td>Currently the only available option is "Redis". When left blank (default), the application will use in-memory caching rather than an external provider, if any of the "UseExternalCache" options is set to true.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Services<br/>:Redis:Configuration</p></td>
    <td>Example: [see this document](https://stackexchange.github.io/StackExchange.Redis/Configuration.html)</td>
    <td>When `ExternalCacheProvider=="Redis"` , provide the connection string information here. Default: an empty string</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:Security:AbsoluteExpirationMinutes</p></td>
    <td>10</td>
    <td>The amount of time the security metadata from `EdFi_Security` database is cached. E.g., if it is set to 10 mins, the claim set changes will reflect in the API at least after 10 mins without needing to recycle API process.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:Profiles:AbsoluteExpirationSeconds</p></td>
    <td>1800</td>
    <td>Number of seconds after which API client profile information is refreshed if not accessed.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:OdsInstances:AbsoluteExpirationSeconds</p></td>
    <td>300</td>
    <td>Number of seconds after which ODS Instance mapping information is refreshed if not accessed.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>ApiSettings:Caching<br/>:Tenants:AbsoluteExpirationSeconds</p></td>
    <td>600</td>
    <td>Number of seconds after which Tenant information is refreshed if not accessed.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>Plugin:Scripts</td>
    <td>`["tpdm"]`</td>
    <td>Configures the script (located in plugin folder by default) responsible for downloading the extension plugins and placing them in the plugin folder.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td><p style={{paddingLeft: '22px', textIndent: '-22px'}}>:new: ApiSettings<br/>:Behaviors:AllowWhitespaceOnlyValues</p></td>
    <td>false</td>
    <td>Overrides the default behavior changed in v7.3 of not allowing whitespace-only values in (non-key) properties.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: ApiSettings:OneRosterVersionUrl</td>
    <td>`localhost:3000`</td>
    <td>Configures the root URL of the OneRoster service. The ODS / API uses this value to retrieve the OneRoster OpenAPI specification for integration into the ODS / API Swagger documentation.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: FeatureManagement:OneRoster</td>
    <td>true</td>
    <td>Enables OneRoster integration in the Ed‑Fi ODS / API. When enabled, the ODS / API recognizes OneRoster as a supported feature and uses the configured `ApiSettings:OneRosterVersionUrl` to retrieve the OneRoster OpenAPI specification and include OneRoster endpoints in the ODS / API Swagger documentation. This feature also requires `Security:AccessTokenType` to be set to `jwt`</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: FeatureManagement:SerializedData</td>
    <td>true</td>
    <td>Activates optimized behavior in the API to [serialize the resource data](./../features/serialized-data.md) into a binary representation that is stored on the "root" record of the resource's underlying table in the ODS. This serialized representation is then used as the primary source for servicing future API requests. While the data in the ODS tables is still maintained, it is only used as the canonical source when the serialized data is invalidated by modification of the ODS data by other processes (detected by a change to `LastModifiedDate`).</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: FeatureManagement:ResourceLinks</td>
    <td>true</td>
    <td>Controls the inclusion of `link` objects in references in responses from the Data Management resource endpoints. Disabling this feature is a server-side optimization reducing database load, but comes with the risk of breaking API client integrations that utilize them.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: FeatureManagement:Extensions</td>
    <td>true</td>
    <td>Enables the API endpoints created for all Extensions. An installation that is not customized at all and still has the GrandBend and Sample extensions can disable this feature in production.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: FeatureManagement:UniqueIdValidation</td>
    <td>false</td>
    <td>Enables [Unique ID System Integration](../../technical-articles/unique-id-system-integration.md). Must implement IUniqueIdToIdValueMapper and register within the implementation within the WebApi.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: FeatureManagement:TokenInfo</td>
    <td>true</td>
    <td>Enables the token\_info introspective endpoint.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>Plugin:Folder</td>
    <td>../../Plugin</td>
    <td>Configures the plugin folder that API looks to deploy extensions dynamically.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: StartupClassName</td>
    <td>CustomStartup</td>
    <td>Specifies the name of the Startup class the application should use. This allows overriding the default Startup class when initializing the API.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: DomainsExcludedFromOpenApi</td>
    <td>Discipline, Staff</td>
    <td>Specifies which domains should be removed from the OpenAPI specification. Any endpoints or descriptors associated with the listed domains will be excluded.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: Security:AccessTokenType</td>
    <td>guid</td>
    <td>Configures the type of access token issued by the API. By default, the APIuses legacy `guid`-based access tokens. Set this value to `jwt` enable issuance and validation of JWT-based OAuth 2.0 access tokens.</td>
  </tr>

  <tr style={{verticalAlign: 'top'}}>
    <td>:new: Security:Jwt</td>
    <td>Example: [see this document](../../how-to-guides/how-to-oneroster-with-the-ed-fi-ods-api.md#step-2-configure-jwtbased-security-in-the-ods--api)</td>
    <td>Required when `Security:AccessTokenType` is set to `jwt` for the API issue and validate JWT tokens. Configures JWT token issuance and validation, including issuer, audience, and public/private key material used for token signing.</td>
  </tr>

</table>

## Environment Configuration

While _appsettings.json_ provides the primary configuration for the ASP.NET Core
applications in the ODS / API solution, _appsettings.**Environment**.json_ can
be used to override the settings in _appsettings.json_ in deployment
environments. In development environment, initdev creates
_appsettings.**Development**.json_ to override settings for development
environment. Note that the settings in _appsettings.**Development**.json_ are
overwritten every time initdev is executed. See [Configuration in ASP.NET
Core](https://learn.microsoft.com/en-us/aspnet/core/fundamentals/configuration/?view=aspnetcore-10.0)
for more details.

## Secret Manager

In development environments ASP.NET Core applications in the ODS / API solution
uses secret manager tool to provide a way for setting overrides away from the
projects so that they aren't accidentally checked into source control. To set
overrides, you can either use the [.NET
CLI Tool](https://learn.microsoft.com/en-us/aspnet/core/security/app-secrets?view=aspnetcore-10.0&tabs=windows#set-a-secret)

```powershell
PS D:\Ed-Fi-ODS-Implementation\Application\EdFi.Ods.WebApi> dotnet user-secrets set "ApiSettings:PopulatedTemplateScript" "Glendale"
Successfully saved ApiSettings:PopulatedTemplateScript = Glendale to the secret store.
```

or [Manage User
Secrets](https://docs.microsoft.com/en-us/aspnet/core/security/app-secrets?view=aspnetcore-10.0&tabs=windows#json-structure-flattening-in-visual-studio)
in Visual Studio.

![Manage User Secrets](/img/reference/ods-api/manage-user-secrets.webp)

Both of the above methods will create a _secret.json_ file in the local
machine's user profile folder and will override settings
in _appsettings_._**Development**_._json._

| Website | secrets.json location in Windows |
| --- | --- |
| Ed-Fi ODS / API | %APPDATA%\\Microsoft\\UserSecrets\\f1506d66-289c-44cb-a2e2-80411cc690ec |
| Sandbox Administration | %APPDATA%\\Microsoft\\UserSecrets\\f1506d66-289c-44cb-a2e2-80411cc690ea |
| Ed-Fi ODS / API Documentation | %APPDATA%\\Microsoft\\UserSecrets\\f1506d66-289c-44cb-a2e2-80411cc690eb |

e.g., Following _secret.json_ overrides the default 'GrandBend' dataset and
deploys with 'Glendale' sample dataset.

```json
{
  "ApiSettings": {
    "PopulatedTemplateScript": "Glendale",
  }
}
```

See [Safe storage of app secrets in development in ASP.NET
Core](https://learn.microsoft.com/en-us/aspnet/core/security/app-secrets?view=aspnetcore-10.0&tabs=windows)
for more details.
